examples/test/testpolicy15772.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15772
  namespace: namespace171
spec:
  podSelector:
    matchLabels:
      key12: value45
      key36: value47
      key41: value35
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value25
          key27: value47
          key21: value37
